--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@
       <div class="container">
         <nav class="nav-bar">
           <ul class="nav-links nav-left">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">STORE</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="store.html">STORE</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
           <ul class="nav-links nav-right">
-            <li><a href="#">PURPOSE</a></li>
-            <li><a href="#">MAP</a></li>
-            <li><a href="#">GALLERY</a></li>
+            <li><a href="purpose.html">PURPOSE</a></li>
+            <li><a href="map.html">MAP</a></li>
+            <li><a href="gallery.html">GALLERY</a></li>
           </ul>
         </nav>
         <img src="../images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
@@ -136,10 +136,10 @@
         <img src="images/logo2.svg" alt="Jurassic Park Logo" />
       </div>
       <div class="footer-icons">
-        <a href="#"><img src="images/youtube.svg" alt="YouTube" /></a>
-        <a href="#"><img src="images/twitter.svg" alt="Twitter" /></a>
-        <a href="#"><img src="images/instagram.svg" alt="Instagram" /></a>
-        <a href="#"><img src="images/facebook.svg" alt="Facebook" /></a>
+        <a href="https://youtube.com"><img src="images/youtube.svg" alt="YouTube" /></a>
+        <a href="https://twitter.com"><img src="images/twitter.svg" alt="Twitter" /></a>
+        <a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram" /></a>
+        <a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook" /></a>
       </div>
       <p class="footer-credits">CREATED BY ETHAN BIRD</p>
       <div class="footer-ingen">
