--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
 
     <div class="content-wrapper">
       <!-- Hero Section -->
-      <section id="home" class="hero-section">
-        <div class="hero-content">
+      <section id="home" class="hero-section index-page">
+        <div class="hero-content index-page">
           <h1 class="custom-font-text">WELCOME TO JURASSIC PARK</h1>
         </div>
       </section>
