--- a/src/purpose.html
+++ b/src/purpose.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jurassic Park - Purpose</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/urw7cfr.css" />
   </head>
 
   <body>
-    <!-- Navigation Bar -->
     <header class="header">
       <div class="container">
         <nav class="nav-bar">
@@ -32,34 +29,28 @@
     </header>
 
     <div class="content-wrapper">
-      <!-- Hero Section -->
-      <section id="home" class="hero-section">
-        <div class="hero-content">
-          <h1 class="custom-font-text">WELCOME TO JURASSIC PARK</h1>
-        </div>
-      </section>
-
-      <!-- Upcoming Events Section -->
-      <section class="events-section">
-        <h2 class="adobefont">UPCOMING EVENTS</h2>
-        <div class="event-cards">
-          <div class="event-card">
-            <div class="date">15</div>
-            <div class="month">MARCH</div>
-          </div>
-          <div class="event-card">
-            <div class="date">17</div>
-            <div class="month">MARCH</div>
-          </div>
-          <div class="event-card">
-            <div class="date">21</div>
-            <div class="month">MARCH</div>
-          </div>
-        </div>
-      </section>
-
-
-    <!-- Footer Section -->
+      <div class="purpose-section">
+        <p>
+          At Jurassic Park, we believe in the boundless potential of science to unlock the mysteries of our planets past
+          and inspire future generations. Our mission is to bridge the gap between ancient history and modern
+          innovation, providing a once-in-a-lifetime opportunity to experience Earth's incredible prehistoric creatures
+          in a controlled, scientifcally advanced environment. Driven by our fascination with the majesty of the
+          dinosaurs that roamed the Earth millions of years ago, we sought to restore these creatures not merely as a
+          spectacle but as living, breathing ambassadors of nature's resilience. By recreating their ecosystems, we aim
+          to educate visitors about the vast diversity of life that preceded humanity, allowing them to reflect on the
+          fragility of our current ecosystems and the importance of conservation. Our park serves as a testament to
+          human ingenuity, representing the synthesis of cutting-edge genetic technology and environmental stewardship.
+          We have meticulously crafted a sanctuary that not only brings dinosaurs back from extinction but also fosters
+          a deep respect for the natural world, blending education, awe, and ethical responsibility. Every exhibit,
+          every creature, every experience is curated to ignite curiosity and inspire a sense of wonder in our visitors.
+          Ultimately, our purpose is to show that the impossible can be achieved when science and imagination work
+          hand-in-hand. By harnessing the power of genetics, we strive to deepen humanity's understanding of both the
+          ancient past and our shared future on this planet. Together, we can marvel at the wonders of nature while
+          remembering that with great power comes great responsibility. We welcome you to Jurassic Park, where we bring
+          the ancient world to life for the benefit of present and future generations.
+        </p>
+      </div>
+    </div>
     <footer class="footer">
       <div class="footer-logo">
         <img src="images/logo2.svg" alt="Jurassic Park Logo" />
