--- a/src/contact.html
+++ b/src/contact.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jurassic Park - Contact</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/urw7cfr.css" />
   </head>
 
   <body>
-    <!-- Navigation Bar -->
     <header class="header">
       <div class="container">
         <nav class="nav-bar">
@@ -32,34 +29,27 @@
     </header>
 
     <div class="content-wrapper">
-      <!-- Hero Section -->
-      <section id="home" class="hero-section">
-        <div class="hero-content">
-          <h1 class="custom-font-text">WELCOME TO JURASSIC PARK</h1>
-        </div>
-      </section>
 
-      <!-- Upcoming Events Section -->
-      <section class="events-section">
-        <h2 class="adobefont">UPCOMING EVENTS</h2>
-        <div class="event-cards">
-          <div class="event-card">
-            <div class="date">15</div>
-            <div class="month">MARCH</div>
-          </div>
-          <div class="event-card">
-            <div class="date">17</div>
-            <div class="month">MARCH</div>
-          </div>
-          <div class="event-card">
-            <div class="date">21</div>
-            <div class="month">MARCH</div>
-          </div>
-        </div>
-      </section>
+      <section class="contact-form-section">
+  <div class="contact-form-container">
+    <form>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required />
 
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required />
 
-    <!-- Footer Section -->
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" />
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="4" required></textarea>
+
+      <button type="submit" class="submit-btn">SUBMIT</button>
+    </form>
+  </div>
+</section>
+
     <footer class="footer">
       <div class="footer-logo">
         <img src="images/logo2.svg" alt="Jurassic Park Logo" />
