--- a/src/store.html
+++ b/src/store.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jurassic Park - Store</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="stylesheet" href="https://use.typekit.net/urw7cfr.css" />
   </head>
 
   <body>
-    <!-- Navigation Bar -->
     <header class="header">
       <div class="container">
         <nav class="nav-bar">
@@ -32,30 +29,36 @@
     </header>
 
     <div class="content-wrapper">
-      <!-- Hero Section -->
-      <section id="home" class="hero-section"></section>
-
-      <!-- Upcoming Events Section -->
-      <section class="events-section">
-        <h2 class="adobefont">UPCOMING EVENTS</h2>
-        <div class="event-cards">
-          <div class="event-card">
-            <div class="date">15</div>
-            <div class="month">MARCH</div>
-          </div>
-          <div class="event-card">
-            <div class="date">17</div>
-            <div class="month">MARCH</div>
-          </div>
-          <div class="event-card">
-            <div class="date">21</div>
-            <div class="month">MARCH</div>
-          </div>
+      <section id="home" class="hero-section store-page">
+        <div class="hero-content store-page">
+          <h1 class="custom-font-text">ALL ITEMS HALF OFF!</h1>
         </div>
       </section>
 
-
-    <!-- Footer Section -->
+      <section class="inventory-section">
+  <div class="inventory-grid">
+    <div class="inventory-item">
+      <img src="images/store2.jpg" alt="Baseball Cap" />
+      <p>BASEBALL CAP</p>
+      <p class="price">$20.99</p>
+    </div>
+    <div class="inventory-item">
+      <img src="images/store3.jpg" alt="Baseball Cap" />
+      <p>BASEBALL CAP</p>
+      <p class="price">$20.99</p>
+    </div>
+    <div class="inventory-item">
+      <img src="images/store1.jpg" alt="T-Shirt" />
+      <p>T-SHIRT</p>
+      <p class="price">$15.99</p>
+    </div>
+    <div class="inventory-item">
+      <img src="images/shop4.jpg" alt="T-Shirt" />
+      <p>T-SHIRT</p>
+      <p class="price">$15.99</p>
+    </div>
+  </div>
+</section>
     <footer class="footer">
       <div class="footer-logo">
         <img src="images/logo2.svg" alt="Jurassic Park Logo" />
