--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,12 @@
           <h1 class="custom-font-text">WELCOME TO JURASSIC PARK</h1>
         </div>
       </section>
+      <div class="get-tickets">
+        <a href="store.html" class="tickets-button">
+          <img src="../images/ticket.jpg" alt="Get Tickets" class="button-image" />
+          <span>GET TICKETS NOW!</span>
+        </a>
+      </div>
 
       <!-- Upcoming Events Section -->
       <section class="events-section">
