--- a/src/map.html
+++ b/src/map.html
@@ -28,12 +28,9 @@
       </div>
     </header>
 
-    <div class="content-wrapper">
-      <section id="home" class="hero-section map-page">
-        <div class="hero-content">
-          <h1 class="custom-font-text">WELCOME TO JURASSIC PARK</h1>
-        </div>
-      </section>
+    <main class="map-page">
+      <img src="../images/map.webp" alt="Jurassic Park Map" class="map-image" />
+    </main>
 
     <footer class="footer">
       <div class="footer-logo">
@@ -55,7 +52,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-
     <script src="/javascripts/main.js"></script>
   </body>
 </html>
