--- a/src/gallery.html
+++ b/src/gallery.html
@@ -28,12 +28,16 @@
       </div>
     </header>
 
-    <div class="content-wrapper">
-      <section id="home" class="hero-section gallery-page">
-        <div class="hero-content">
-          <h1 class="custom-font-text">WELCOME TO JURASSIC PARK</h1>
-        </div>
-      </section>
+    <main class="gallery-page container py-5">
+      <div class="gallery-grid">
+        <img src="../images/group1.jpg" alt="Group exploring Jurassic Park" class="gallery-item" />
+        <img src="../images/group2.jpg" alt="Family enjoying Jurassic Park" class="gallery-item" />
+        <img src="../images/bottle.jpg" alt="Jurassic Park branded water bottle" class="gallery-item" />
+        <img src="../images/jeep.jpg" alt="Jurassic Park safari jeep" class="gallery-item" />
+        <img src="../images/photo1.jpg" alt="Inside Jurassic Park museum" class="gallery-item" />
+        <img src="../images/photo2.jpg" alt="Velociraptor in the jungle" class="gallery-item" />
+      </div>
+    </main>
 
     <footer class="footer">
       <div class="footer-logo">
@@ -55,7 +59,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-
     <script src="/javascripts/main.js"></script>
   </body>
 </html>
