--- a/src/purpose.html
+++ b/src/purpose.html
@@ -28,29 +28,38 @@
       </div>
     </header>
 
-    <div class="content-wrapper">
-      <div class="purpose-section">
-        <p>
-          At Jurassic Park, we believe in the boundless potential of science to unlock the mysteries of our planets past
-          and inspire future generations. Our mission is to bridge the gap between ancient history and modern
-          innovation, providing a once-in-a-lifetime opportunity to experience Earth's incredible prehistoric creatures
-          in a controlled, scientifcally advanced environment. Driven by our fascination with the majesty of the
-          dinosaurs that roamed the Earth millions of years ago, we sought to restore these creatures not merely as a
-          spectacle but as living, breathing ambassadors of nature's resilience. By recreating their ecosystems, we aim
-          to educate visitors about the vast diversity of life that preceded humanity, allowing them to reflect on the
-          fragility of our current ecosystems and the importance of conservation. Our park serves as a testament to
-          human ingenuity, representing the synthesis of cutting-edge genetic technology and environmental stewardship.
-          We have meticulously crafted a sanctuary that not only brings dinosaurs back from extinction but also fosters
-          a deep respect for the natural world, blending education, awe, and ethical responsibility. Every exhibit,
-          every creature, every experience is curated to ignite curiosity and inspire a sense of wonder in our visitors.
-          Ultimately, our purpose is to show that the impossible can be achieved when science and imagination work
-          hand-in-hand. By harnessing the power of genetics, we strive to deepen humanity's understanding of both the
-          ancient past and our shared future on this planet. Together, we can marvel at the wonders of nature while
-          remembering that with great power comes great responsibility. We welcome you to Jurassic Park, where we bring
-          the ancient world to life for the benefit of present and future generations.
+    <main class="content-wrapper">
+      <section class="purpose-section container py-5">
+        <h1 class="text-center mb-4">Our Purpose</h1>
+        <p class="lead text-center mb-5">
+          At Jurassic Park, we bring the ancient world to life, combining science and imagination to inspire awe and
+          curiosity.
         </p>
-      </div>
-    </div>
+
+        <h2 class="mb-3">Our Mission</h2>
+        <p>
+          Jurassic Park bridges the gap between ancient history and modern innovation, offering visitors a controlled,
+          scientifically advanced environment to experience Earth's prehistoric creatures.
+        </p>
+
+        <h2 class="mb-3">Conservation & Education</h2>
+        <p>
+          By recreating ecosystems, we aim to educate visitors about the diversity of life that preceded humanity,
+          emphasizing the fragility of modern ecosystems and the importance of conservation.
+        </p>
+
+        <h2 class="mb-3">Innovation & Responsibility</h2>
+        <p>
+          Our park serves as a testament to human ingenuity, blending cutting-edge genetic technology with environmental
+          stewardship to foster respect for the natural world.
+        </p>
+
+        <blockquote class="blockquote text-center my-4">
+          <p>"With great power comes great responsibility." – Jurassic Park</p>
+        </blockquote>
+      </section>
+    </main>
+
     <footer class="footer">
       <div class="footer-logo">
         <img src="images/logo2.svg" alt="Jurassic Park Logo" />
@@ -71,7 +80,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-
     <script src="/javascripts/main.js"></script>
   </body>
 </html>
