--- a/src/gallery.html
+++ b/src/gallery.html
@@ -24,18 +24,18 @@
             <li><a href="gallery.html">GALLERY</a></li>
           </ul>
         </nav>
-        <img src="../images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
+        <img src="images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
       </div>
     </header>
 
     <main class="gallery-page container py-5">
       <div class="gallery-grid">
-        <img src="../images/group1.jpg" alt="Group exploring Jurassic Park" class="gallery-item" />
-        <img src="../images/group2.jpg" alt="Family enjoying Jurassic Park" class="gallery-item" />
-        <img src="../images/bottle.jpg" alt="Jurassic Park branded water bottle" class="gallery-item" />
-        <img src="../images/jeep.jpg" alt="Jurassic Park safari jeep" class="gallery-item" />
-        <img src="../images/photo1.jpg" alt="Inside Jurassic Park museum" class="gallery-item" />
-        <img src="../images/photo2.jpg" alt="Velociraptor in the jungle" class="gallery-item" />
+        <img src="images/group1.jpg" alt="Group exploring Jurassic Park" class="gallery-item" />
+        <img src="images/group2.jpg" alt="Family enjoying Jurassic Park" class="gallery-item" />
+        <img src="images/bottle.jpg" alt="Jurassic Park branded water bottle" class="gallery-item" />
+        <img src="images/jeep.jpg" alt="Jurassic Park safari jeep" class="gallery-item" />
+        <img src="images/photo1.jpg" alt="Inside Jurassic Park museum" class="gallery-item" />
+        <img src="images/photo2.jpg" alt="Velociraptor in the jungle" class="gallery-item" />
       </div>
     </main>
 
