--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             <li><a href="gallery.html">GALLERY</a></li>
           </ul>
         </nav>
-        <img src="../images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
+        <img src="images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
       </div>
     </header>
 
@@ -40,7 +40,7 @@
       </section>
       <div class="get-tickets">
         <a href="store.html" class="tickets-button">
-          <img src="../images/ticket.jpg" alt="Get Tickets" class="button-image" />
+          <img src="images/ticket.jpg" alt="Get Tickets" class="button-image" />
           <span>GET TICKETS NOW!</span>
         </a>
       </div>
@@ -121,15 +121,15 @@
         <h2 class="adobefont">POPULAR ATTRACTIONS</h2>
         <div class="attraction-container">
           <div class="attraction">
-            <img src="../images/trex.jpg" alt="Tyrannosaurus Rex" />
+            <img src="images/trex.jpg" alt="Tyrannosaurus Rex" />
             <p class="adobefont">TYRANNOSAURUS REX</p>
           </div>
           <div class="attraction">
-            <img src="../images/triceratops.jpg" alt="Triceratops" />
+            <img src="images/triceratops.jpg" alt="Triceratops" />
             <p class="adobefont">TRICERATOPS</p>
           </div>
           <div class="attraction">
-            <img src="../images/raptor.jpg" alt="Velociraptor" />
+            <img src="images/raptor.jpg" alt="Velociraptor" />
             <p class="adobefont">VELOCIRAPTOR</p>
           </div>
         </div>
