--- a/src/contact.html
+++ b/src/contact.html
@@ -24,7 +24,7 @@
             <li><a href="gallery.html">GALLERY</a></li>
           </ul>
         </nav>
-        <img src="../images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
+        <img src="images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
       </div>
     </header>
 
