--- a/src/map.html
+++ b/src/map.html
@@ -24,12 +24,12 @@
             <li><a href="gallery.html">GALLERY</a></li>
           </ul>
         </nav>
-        <img src="../images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
+        <img src="images/logo.svg" alt="Jurassic Park Logo" class="header-logo" />
       </div>
     </header>
 
     <main class="map-page">
-      <img src="../images/map.webp" alt="Jurassic Park Map" class="map-image" />
+      <img src="images/map.webp" alt="Jurassic Park Map" class="map-image" />
     </main>
 
     <footer class="footer">
