--- a/src/contact.html
+++ b/src/contact.html
@@ -32,22 +32,15 @@
 
       <section class="contact-form-section">
   <div class="contact-form-container">
-    <form>
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required />
+  <form>
+    <input type="text" placeholder="Name" required />
+    <input type="email" placeholder="Email" required />
+    <input type="tel" placeholder="Phone Number" required />
+    <textarea placeholder="Message" rows="4" required></textarea>
+    <button type="submit" class="submit-btn">SUBMIT</button>
+  </form>
+</div>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="phone">Phone Number</label>
-      <input type="tel" id="phone" name="phone" />
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="4" required></textarea>
-
-      <button type="submit" class="submit-btn">SUBMIT</button>
-    </form>
-  </div>
 </section>
 
     <footer class="footer">
