--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="review-card">
-              <img src="images/review1.jpg" alt="Reviewer Image" class="d-block mx-auto" />
+              <img src="images/Review1.jpg" alt="Reviewer Image" class="d-block mx-auto" />
               <div class="stars text-center">⭐⭐⭐⭐⭐</div>
               <blockquote>
                 “Our family had a very great time at Jurassic Park! I highly recommend staying longer!”
@@ -73,7 +73,7 @@
           </div>
           <div class="carousel-item">
             <div class="review-card">
-              <img src="images/review2.jpeg" alt="Reviewer Image" class="d-block mx-auto" />
+              <img src="images/Review2.jpeg" alt="Reviewer Image" class="d-block mx-auto" />
               <div class="stars text-center">⭐⭐⭐⭐⭐</div>
               <blockquote>“It was thrilling and amazing. The rides are incredible!”</blockquote>
               <footer>Jane Smith</footer>
