--- a/src/purpose.html
+++ b/src/purpose.html
@@ -29,8 +29,12 @@
     </header>
 
     <main class="content-wrapper">
+      <section id="home" class="hero-section purpose-page">
+        <div class="hero-content store-page">
+          <h1 class="custom-font-text">OUR PURPOSE</h1>
+        </div>
+      </section>
       <section class="purpose-section container py-5">
-        <h1 class="text-center mb-4">Our Purpose</h1>
         <p class="lead text-center mb-5">
           At Jurassic Park, we bring the ancient world to life, combining science and imagination to inspire awe and
           curiosity.
